--- a/assets/styles/styles.index.css
+++ b/assets/styles/styles.index.css
@@ -10,12 +10,7 @@ body {
     font-family: "Bebas Neue", sans-serif;
     background-color: rgb(210, 228, 236);
 }
-h1 {
-    text-align: center;
-}
-h3 {
-    font-family: "Lugrasimo";
-}
+
 header {
     display: flex;
     justify-content: space-around;
@@ -32,7 +27,7 @@ header {
 #links {
     display: flex;
     justify-content: space-around;
-    width: 50%;
+    width: 100%;
 
 }
 #links a {
@@ -46,4 +41,35 @@ header {
     border-bottom: 3px solid  ;
     color: rgb(84, 151, 169);
     transform: scale(1.05);
+}
+#carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background-color: rgb(120, 190, 228);
+    margin: 20px;
+}
+#carousel img {
+height: 100%;
+width: 100%;
+border-radius: 12px;
+object-fit: cover;
+
+}
+#main-new {
+    width: 70%;
+    background-color: rgb(66, 148, 207);
+    margin: 20px auto;
+    padding: 20px;
+}
+#aside {
+    width: 28%;
+    background-color: rgb(61, 175, 203);
+    margin: 20px;
+    padding: 20px;
+}
+main{
+    display: flex;
+    justify-content: space-around;
 }
